fix(a11y): improve light mode color contrast

--- a/new-portifolio/src/components/Header/Header.module.css
+++ b/new-portifolio/src/components/Header/Header.module.css
@@ -29,12 +29,12 @@
 .header > nav {
   grid-column: 2 / 3;
 
-  background-color: hsla(209, 88%, 20%, 0.5);
+  background-color: var(--color-header-bg);
   backdrop-filter: blur(0.75em);
 
   box-shadow:
-    inset 0.125em 0.125em 0 hsla(209, 53%, 51%, 0.25),
-    inset -0.125em -0.125em 0 hsla(209, 83%, 29%, 0.25);
+    inset 0.125em 0.125em 0 var(--color-header-box-shadow-light),
+    inset -0.125em -0.125em 0 var(--color-header-box-shadow-shadow);
 
   display: flex;
   justify-content: space-between;
